syntax = "proto2";
package mmo.proto_client;

message ClassEntry {
	required uint32 id = 1;
	required string name = 2;
	optional uint32 flags = 6;
}

message Classes {
	repeated ClassEntry entry = 1;
}
